--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -60,6 +60,12 @@
           }
         }
       }
+
+      .developer {
+        color: rgb(165, 162, 162);
+        font-weight: 400;
+        margin-top: 10px;
+      }
     }
     a {
       position: absolute;
