--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,64 @@
 .contact {
-  background-color: lightblue;
+  background-color: white;
+  display: flex;
+
+  .left {
+    flex: 1;
+    overflow: hidden;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+    }
+  }
+  .right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+      font-size: 50px;
+    }
+
+    form {
+      width: 70%;
+      height: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      input {
+        width: 300px;
+        height: 30px;
+        margin-bottom: 20px;
+      }
+
+      textarea {
+        width: 300px;
+        height: 200px;
+        font-size: 14px;
+        margin-bottom: 20px;
+      }
+
+      button {
+        width: 150px;
+        height: 30px;
+        color: whitesmoke;
+        background-color: crimson;
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
+        margin-bottom: 20px;
+      }
+
+      span {
+        color: green;
+        font-weight: 400;
+      }
+    }
+  }
 }
