--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -34,7 +34,7 @@
       justify-content: center;
       color: white;
       position: relative;
-      transition: all 0.5 ease;
+      transition: all 0.5s ease;
       cursor: pointer;
 
       h3 {
