--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,81 @@
 .testimonials {
-  background-color: lightcoral;
+  background-color: white;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    font-size: 50px;
+  }
+
+  .container {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .card {
+      width: 30%;
+      height: 50%;
+      border-radius: 10px;
+      box-shadow: 0px 0px 15px -8px black;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      padding: 20px;
+      margin: 0 20px;
+      transition: all 1s ease;
+
+      &.featured {
+        width: 40%;
+        height: 60%;
+      }
+
+      &:hover {
+        transform: scale(1.1);
+      }
+
+      .top {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          &.left,
+          &.right {
+            height: 25px;
+          }
+          &.user {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin: 0 30px;
+          }
+        }
+      }
+
+      .center {
+        padding: 10px;
+        background-color: rgb(253, 242, 245);
+        border-radius: 10px;
+      }
+      .bottom {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+
+        h3 {
+          margin-bottom: 5px;
+        }
+
+        h4 {
+          color: grey;
+        }
+      }
+    }
+  }
 }
