--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,103 @@
 .works {
-  background-color: lightgreen;
+  background-color: crimson;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+  .arrow {
+    height: 50px;
+    position: absolute;
+
+    &.left {
+      left: 100px;
+      transform: rotate(180deg);
+      cursor: pointer;
+    }
+
+    &.right {
+      right: 100px;
+      cursor: pointer;
+    }
+  }
+
+  .slider {
+    height: 350px;
+    display: flex;
+    position: absolute;
+    left: 0;
+    transition: all 1s ease-out;
+
+    .container {
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .item {
+        width: 700px;
+        height: 100%;
+        background-color: white;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .left {
+          height: 80%;
+          flex: 4;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .leftContainer {
+            width: 90%;
+            height: 80%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .imgContainer {
+              width: 40px;
+              height: 40px;
+              border-radius: 100%;
+              background-color: rgb(252, 175, 147);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              img {
+                width: 25px;
+              }
+            }
+            h2 {
+              font-size: 20px;
+            }
+            p {
+              font-size: 13px;
+            }
+            span {
+              font-size: 12px;
+              font-weight: 600;
+              text-decoration: underline;
+              cursor: pointer;
+            }
+          }
+        }
+        .right {
+          width: 100%;
+          height: 100%;
+          flex: 8;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+
+          img {
+            width: 400px;
+            transform: rotate(-10deg);
+          }
+        }
+      }
+    }
+  }
 }
