--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,6 +1,12 @@
+@import "../../global.scss";
+
 .contact {
   background-color: white;
   display: flex;
+  @include mobile {
+    flex-direction: column;
+    justify-content: center;
+  }
 
   .left {
     flex: 1;
@@ -20,6 +26,10 @@
 
     h2 {
       font-size: 50px;
+
+      @include mobile {
+        font-size: 25px;
+      }
     }
 
     form {
@@ -30,17 +40,22 @@
       align-items: center;
       justify-content: center;
 
+      @include mobile {
+        width: 100%;
+        height: 90%;
+      }
+
       input {
         width: 300px;
         height: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
 
       textarea {
         width: 300px;
         height: 200px;
         font-size: 14px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
 
       button {
@@ -52,12 +67,17 @@
         border-radius: 10px;
         font-weight: 500;
         cursor: pointer;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
 
       span {
-        color: green;
+        color: darkgreen;
         font-weight: 400;
+
+        @include mobile {
+          font-size: 11px;
+          margin-bottom: 5px;
+        }
       }
     }
   }
