--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .testimonials {
   background-color: white;
   flex-direction: column;
@@ -7,6 +9,10 @@
 
   h1 {
     font-size: 50px;
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   .container {
@@ -15,6 +21,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @include mobile {
+      flex-direction: column;
+    }
 
     .card {
       width: 30%;
@@ -28,9 +38,21 @@
       margin: 0 20px;
       transition: all 1s ease;
 
+      @include mobile {
+        margin: 5px 0;
+        height: 180px;
+        width: 200px;
+      }
+
       &.featured {
         width: 40%;
         height: 60%;
+
+        @include mobile {
+          width: 250px;
+          height: 180px;
+          margin: 1px;
+        }
       }
 
       &:hover {
@@ -53,6 +75,11 @@
             border-radius: 50%;
             object-fit: cover;
             margin: 0 30px;
+
+            @include mobile {
+              width: 35px;
+              height: 35px;
+            }
           }
         }
       }
@@ -61,6 +88,11 @@
         padding: 10px;
         background-color: rgb(253, 242, 245);
         border-radius: 10px;
+
+        @include mobile {
+          font-size: 11px;
+          padding: 5px;
+        }
       }
       .bottom {
         display: flex;
@@ -70,10 +102,18 @@
 
         h3 {
           margin-bottom: 5px;
+
+          @include mobile {
+            font-size: 13px;
+          }
         }
 
         h4 {
           color: grey;
+
+          @include mobile {
+            font-size: 11px;
+          }
         }
       }
     }
