Sosyal Medya Sayfası Tamam

--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -1,14 +1,17 @@
 @import "../../global.scss";
 
-.testimonials {
+.social {
   background-color: white;
   flex-direction: column;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 
   h1 {
     font-size: 50px;
+    position: absolute;
+    top: 10px;
 
     @include mobile {
       font-size: 20px;
@@ -16,104 +19,46 @@
   }
 
   .container {
-    width: 100%;
-    height: 80%;
+    padding: 0;
+    width: 70%;
+    height: 70%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    flex-direction: column;
 
-    @include mobile {
-      flex-direction: column;
-    }
-
-    .card {
-      width: 30%;
-      height: 50%;
-      border-radius: 10px;
-      box-shadow: 0px 0px 15px -8px black;
+    .item {
       display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      padding: 20px;
-      margin: 0 20px;
-      transition: all 1s ease;
+      padding: 20px 30px;
+      border-radius: 20px;
+      color: white;
+      margin: 5px 0;
 
-      @include mobile {
-        margin: 5px 0;
-        height: 180px;
-        width: 200px;
-      }
-
-      &.featured {
-        width: 40%;
-        height: 60%;
-
-        @include mobile {
-          width: 250px;
-          height: 180px;
-          margin: 1px;
-        }
-      }
-
-      &:hover {
-        transform: scale(1.1);
-      }
-
-      .top {
+      a {
         display: flex;
         align-items: center;
-        justify-content: center;
+        text-decoration: none;
+        color: inherit;
+        cursor: pointer;
+        margin: 30px 0;
+        transition: all 1s ease;
+
+        &:hover {
+          transform: scale(1.1);
+        }
 
         img {
-          &.left,
-          &.right {
-            height: 25px;
-          }
-          &.user {
-            height: 100px;
-            width: 100px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin: 0 30px;
-
-            @include mobile {
-              width: 35px;
-              height: 35px;
-            }
-          }
-        }
-      }
-
-      .center {
-        padding: 10px;
-        background-color: rgb(253, 242, 245);
-        border-radius: 10px;
-
-        @include mobile {
-          font-size: 11px;
-          padding: 5px;
-        }
-      }
-      .bottom {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-
-        h3 {
-          margin-bottom: 5px;
-
-          @include mobile {
-            font-size: 13px;
-          }
+          height: 80px;
+          padding: 0 20px;
         }
 
-        h4 {
-          color: grey;
+        h2 {
+          font-weight: 500;
+          font-size: 35px;
+        }
 
-          @include mobile {
-            font-size: 11px;
-          }
+        span {
+          font-weight: 300;
+          font-style: italic;
         }
       }
     }
