--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -22,13 +22,59 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
 
     h2 {
+      width: 100%;
+      height: 10%;
       font-size: 50px;
+      text-align: center;
 
       @include mobile {
         font-size: 25px;
+      }
+    }
+
+    .emailPhoneContainer {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      margin: auto 0;
+
+      .email,
+      .phone {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        color: inherit;
+        border-radius: 10px;
+        transition: all 1s ease-out;
+        padding: 5px 30px;
+        margin: 10px 0;
+
+        &:hover {
+          background-color: crimson;
+          color: white;
+        }
+
+        .mailIcon,
+        .phoneIcon {
+          @include mobile {
+            font-size: 12px;
+          }
+        }
+
+        span {
+          margin: 20px 5px;
+
+          @include mobile {
+            font-size: 12px;
+          }
+        }
       }
     }
 
