--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -20,7 +20,6 @@
 
   .container {
     padding: 0;
-    width: 70%;
     height: 70%;
     display: flex;
     justify-content: center;
@@ -39,7 +38,6 @@
         text-decoration: none;
         color: inherit;
         cursor: pointer;
-        margin: 30px 0;
         transition: all 1s ease;
 
         &:hover {
@@ -58,6 +56,7 @@
 
         span {
           font-weight: 300;
+          font-size: 14px;
           font-style: italic;
         }
       }
