--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -110,7 +110,7 @@
                 font-size: 10px;
               }
             }
-            span {
+            a {
               font-size: 12px;
               font-weight: 600;
               text-decoration: underline;
