Works- son revize

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -28,11 +28,11 @@
   }
 
   .slider {
-    height: 350px;
+    height: 400px;
     display: flex;
     position: absolute;
     left: 0;
-    transition: all 1s ease-out;
+    transition: all 1.3s ease-out;
 
     @include mobile {
       height: 100vh;
@@ -54,6 +54,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0 10px;
 
         @include mobile {
           width: 90%;
@@ -133,7 +134,7 @@
 
           img {
             width: 400px;
-            transform: rotate(-10deg);
+            transform: rotate(10deg);
           }
         }
       }
