--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -16,7 +16,7 @@
     .imageContainer {
       width: 700px;
       height: 700px;
-      background-color: crimson;
+      background-color: #d6d6d4;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
@@ -24,14 +24,16 @@
       float: right;
 
       @include mobile {
-        align-items: flex-start;
+        align-items: flex-end;
+        width: 400px;
+        height: 400px;
       }
 
       img {
         height: 90%;
 
         @include mobile {
-          height: 50%;
+          height: 80%;
         }
       }
     }
